src/tests/cases/snapshots/diskonaut__tests__cases__ui__zoom_into_small_files-8.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[7]"
---
                                                                                                                                                                                              
                                                                                                                                     ─                      ┬                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                            file2                                                                           │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                         1.0M (41%)                                                                         │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │             file1               
                                                                                                                                                            │                                 
├───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤          392.0K (17%)           
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                            file3                                                                           │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                         1.0M (41%)                                                                         │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            │                                 
                                                                                                                                                            ├                                 
                                                                                                                                                            │                                 
                                                                                                                                     ─                      ┴                                 
                                                                                                                                                                                              
                                                                                                                                                                                              

